fix test of Cat class after review